--- a/data-engineer.html
+++ b/data-engineer.html
@@ -187,7 +187,7 @@
 <p><span class="badge badge-light">Bern, Schweiz</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/D7AC576228'>Data Engineer (Contract To Hire) - Trantor Software</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/D7AC576228'>Data Engineer (Contract To Hire) - Trantor Software</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... About TrantorFounded in 2009, Trantor is a leading software services company 
 headquartered in Menlo Park, California. We deliver innovative technology?...</p>
@@ -197,7 +197,7 @@ headquartered in Menlo Park, California. We deliver innovative technology?...</p
 <p>14 oct. 2019 ... En tant que BI / Data Engineer, vous rejoignez l'?quipe Data compos?e de data 
 analysts et data scientists. Sous la supervision du Head of Data, votre r?le est?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/truedata/j/34914E9205'>Data Engineer - TrueData</a></h5> 
+<h5><a href='https://apply.workable.com/truedata/j/34914E9205'>Data Engineer - TrueData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... TrueData is a leading mobile data platform that works with app publishers who 
 generate mobile data and the apps, agencies, brands, and ad tech companies?...</p>
@@ -314,11 +314,11 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318417-senior-data-engineer'>CapTech Consulting Senior Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318417-senior-data-engineer'>CapTech Consulting Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://levelset.applytojob.com/apply/ojggr61shU/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
+<h5><a href='http://levelset.applytojob.com/apply/ojggr61shU/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -330,7 +330,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://graze.applytojob.com/apply/HZU0PUX3h6/Senior-Data-Engineer'>Senior Data Engineer - graze.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://graze.applytojob.com/apply/HZU0PUX3h6/Senior-Data-Engineer'>Senior Data Engineer - graze.com - Career Page</a></h5> 
 <p><span class="badge badge-light">Richmond London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -455,7 +455,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/inmobi/jobs/1929054'>Job Application for Data Engineer at InMobi </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/inmobi/jobs/1929054'>Job Application for Data Engineer at InMobi </a></h5> 
 <p><span class="badge badge-light">Kansas City, MO</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -467,7 +467,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ojr3afwH&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n3DelMww'>ServiceNow Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ojr3afwH&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n3DelMww'>ServiceNow Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
