--- a/data-architect.html
+++ b/data-architect.html
@@ -69,6 +69,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jellysmack.recruitee.com/l/fr/o/database-architect-hf-cdi-corse'>
+      Database Architect H/F - CDI (Corse) - Jellysmack
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-architect-2858'>Data Architect - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -185,7 +191,7 @@ dig?...</p>
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999698067033--immediate-need-for-data-architect-'>Infoplus Technologies "Immediate Need for Data Architect" | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999698067033--immediate-need-for-data-architect-'>Infoplus Technologies "Immediate Need for Data Architect" | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -292,11 +298,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51'>Ridango AS - Data Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51'>Ridango AS - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/05477b95-14f8-45ab-b280-83ab048936b9'>Datacom - Technical Architecture Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/05477b95-14f8-45ab-b280-83ab048936b9'>Datacom - Technical Architecture Manager</a></h5> 
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -312,7 +318,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/l/fr/o/database-architect-hf-cdi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/fr/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -373,7 +379,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p>Oct 4, 2019 ... Our consultants bring deep expertise in Data Science, Machine Learning and AI. 
 We are the trusted analytics partner for several Fortune 100 companies,?...</p>
 <hr/>
-<h5><a href='https://greenzone-solutions-inc.workable.com/j/A7800CFC15'>GreenZone Solutions, Inc. - Jobs: Data Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenzone-solutions-inc.workable.com/j/A7800CFC15'>GreenZone Solutions, Inc. - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 2, 2019 ... Use machine learning, algorithm generation and implementation, and support 
 our Federal Client's business in defining requirements to support machine?...</p>
@@ -414,7 +420,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ignitisgroup/743999697255174-data-solutions-architect'>Ignitis group DATA SOLUTIONS ARCHITECT | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ignitisgroup/743999697255174-data-solutions-architect'>Ignitis group DATA SOLUTIONS ARCHITECT | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vilnius</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -450,7 +456,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/aarete/job/oPgx6fws'>AArete Careers - Data Architecture Consultant</a></h5> 
+<h5><a href='http://jobs.jobvite.com/aarete/job/oPgx6fws'>AArete Careers - Data Architecture Consultant</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -462,7 +468,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trinitypartners/job/oqLjbfwp'>Trinity Careers - Senior Data Integration Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trinitypartners/job/oqLjbfwp'>Trinity Careers - Senior Data Integration Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -481,10 +487,6 @@ our Federal Client's business in defining requirements to support machine?...</p
 <h5><a href='https://tetrascience.workable.com/jobs/1133176'>TetraScience - Jobs: Life Sciences Data Engineer and Solution Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-11</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHk9VfwP&k=Job&j=oaqV9fwo&__jvst=Employee&__jvsd=sMuo8gwx&__jvsc=Twitter&bid=nkUw6Mw7'>Conviva Careers - Principal Data Architect</a></h5> 
-<p><span class="badge badge-light">Foster City California</span></p>
-<p>Posted on:: 2019-10-10</p>
 <hr/>
 
 
