--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -94,7 +94,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803394'>Job Application for Senior iOS Engineer - Singapore Based at foodpanda Philippines</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803394'>Job Application for Senior iOS Engineer - Singapore Based at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -209,7 +209,7 @@ user facing iOS apps from scratch. You are proud of your code and can?...</p>
 <p>Oct 9, 2019 ... Are you a highly regarded talented Senior iOS Software Engineer with a passion 
 for delivering high quality applications that help change the world? Then we?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
+<h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of iOS Engineer (Southampton) at Starling Bank.</p>
 <hr/>
@@ -222,7 +222,7 @@ for delivering high quality applications that help change the world? Then we?...
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999697685561-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999697685561-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -296,7 +296,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -321,7 +321,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">London  London Oxford</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -402,7 +402,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581881'>Stellenangebot: iOS Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581881'>Stellenangebot: iOS Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
@@ -429,7 +429,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/413731-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/413731-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
